# fastapi-ml-scaffolding

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: learn-github-actions.yml  python-app.yml  unit_tests.yml
app/: main.py
app/api/routes/: heartbeat.py  prediction.py  router.py
app/core/: config.py  event_handlers.py  security.py
app/services/: models.py
fastapi_scaffolding/: main.py
fastapi_scaffolding/api/routes/: heartbeat.py  prediction.py  router.py
fastapi_scaffolding/core/: config.py  event_handlers.py  security.py
fastapi_scaffolding/models/: prediction.py
fastapi_scaffolding/services/: models.py
tests/: Dockerfile  conftest.py
tests/test_api/: test_api_auth.py  test_heartbeat.py  test_prediction.py
tests/test_service/: test_models.py
