[tool.poetry]
name = "fastapi-ml-scaffolding"
version = "0.1.0"
description = "Serving machine learning models production-ready, fast, easy and secure powered by FastAPI"
authors = ["jmeisele <jmeisele@yahoo.com>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
scikit-learn = "^0.24.2"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
isort = "^5.8.0"
black = "^21.4b2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
